# Onitama

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  onitama-build-pipeline.yml
src/: cli.cpp  cli.h  constants.h  gameMaster.cpp  gameMaster.h  main.cpp
src/cli/: cards.cpp  cards.h  cli.cpp  cli.h  command.cpp  command.h  experiment.cpp  experiment.h  game.cpp  game.h  print.cpp  print.h  strategies.cpp  strategies.h  test.cpp  test.h  version.cpp  version.h
src/experiments/: fairCards.cpp  fairCards.h  stateGraph.cpp  stateGraph.h
src/experiments/fairCards/: fairCards.cpp  fairCards.h
src/experiments/stateGraph/: args.cpp  args.h  stateGraph.cpp  stateGraph.h
src/game/: board.cpp  board.h  card.cpp  card.h  game.cpp  game.h  move.cpp  move.h  piece.cpp  piece.h
src/stateGraph/: dispersedFrontier.cpp  exploreComponent.cpp  forwardRetrogradeAnalysis.cpp  perfectStrategy.cpp  retrogradeAnalysis.cpp  saveSystem.cpp  saveSystem.h  stateGraph.cpp  stateGraph.h  strategies.h
src/strategies/: human.cpp  human.h  minMax.cpp  minMax.h  monteCarlo.cpp  monteCarlo.h  positional.cpp  positional.h  random.cpp  random.h  strategy.h
src/util/: ansiColor.cpp  ansiColor.h  base64.h  color.cpp  color.h  coordinate.cpp  coordinate.h  offset.cpp  offset.h  parse.cpp  parse.h  stateGraph.cpp  stateGraph.h  stopwatch.h  stopwatch.tpp  winState.cpp  winState.h
tests/: assertEqual.cpp  assertEqual.h  tests.cpp  tests.h
tests/game/: board.cpp  board.h  game.cpp  game.h
tests/resources/: load.graph
tests/stateGraph/: edge.cpp  edge.h  retrogradeAnalysis.cpp  retrogradeAnalysis.h  saveSystem.cpp  saveSystem.h  vertex.cpp  vertex.h
